Fix flex wrap issues with input fields

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
     background-color: rgba(0, 0, 0, .6);
     color: white;
     gap: 0.5rem;
-    margin: 300px 0 auto 0;
+    margin: 25vh 0 auto 0;
     padding: 1rem;
 }
 
@@ -52,6 +52,8 @@ body {
 
 .form-area {
     background-color: rgb(240, 234, 226);
+    min-width: 500px;
+    flex-shrink: 0;
 }
 
 .form-intro, .form-submit, .form-body {
@@ -70,7 +72,7 @@ body {
 }
 
 .form-intro p {
-    width: 80%;
+    width: min(80%, 800px);
 }
 
 .form-body, .form-submit {
@@ -84,7 +86,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 4rem;
+    gap: 2rem;
     overflow: auto;
 }
 
@@ -96,15 +98,15 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
+    /* width: min(80%, 800px); */
 }
 
 .input-fields div {
     display: flex;
     flex-direction: column;
-    width: 34%;
-    min-width: none;
+    flex-basis: min(400px, 45%);
     font-size: 1rem;
-    margin-right: 4rem;
+    min-width: 300px
 }
 
 input {
@@ -114,7 +116,7 @@ input {
     padding: .5rem;
     border: 1px solid lightgray;
     border-radius: 8px;
-    width: 300px;
+    width: 100%;
 }
 
 input:invalid {
